--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.22.1/ramda.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="app.js"></script>
+
 </head>
 
 <body ng-cloak ng-controller="MainCtrl">
@@ -48,14 +49,17 @@
         <div class="col-md-offset-4 col-md-4">
             <div class="form-group">
                 <label for="">Add</label>
-                <input type="text" ng-model="newTask" class="form-control">
+                <input type="text" ng-model="newTask.msg"  class="form-control">
+                
             </div>
         </div>      
     </div>    
     <div class="row">
-        <div class= "col-md-12" ng-repeat="task in tasks">
-            {{task}} {{$index}}
-            <button class="btn btn-danger" ng-click="removeTask($index)">remove</button>
+        <div class= "col-md-12"  ng-repeat="task in tasks">
+            <a href="#" ng-click="editTask(task)">Edit task</a>
+            {{task.msg}} {{$index}} {{edit}}
+            <button class="btn btn-danger" ng-click="removeTask($index)">Remove</button>
+            
         </div>
     </div>
 </div>
